# tex2jb

./: .gitignore  pyproject.toml
examples/: .gitignore  Makefile  example.tex
src/tex2jb/: __init__.py  tex_env.py  types.py
src/tex2jb/cli/: app.py
src/tex2jb/cli/commands/: __init__.py  hello.py
src/tex2jb/converter/: first_pass.py
src/tex2jb/schemas/: __init__.py  toc.py
src/tex2jb/to_markdown/: __init__.py  context.py  tex_content.py  tex_token.py  utils.py
src/tex2jb/to_markdown/tex_cmd/: __init__.py  label.py  sectioning.py
src/tex2jb/to_markdown/tex_env/: __init__.py  exercise.py  math.py  theorem.py
tests/: test_jupyter_book_writer.py  test_to_markdown.py
